--- a/css/trade.css
+++ b/css/trade.css
@@ -570,3 +570,94 @@ a.AssetPairRow:hover .AssetPair__separator {
   font-size: 18px;
   color: #999;
 }
+
+.popubDialog {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+}
+
+.popubDialog .popubDialog__main {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  min-width: 1100px;
+  max-width: 75%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.popubDialog .popubDialog__body {
+  background: #fff;
+  max-width: 100%;
+  border-radius: 8px;
+  max-height: 1000px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.popubDialog .popubDialog__close {
+  text-align: center;
+  margin-top: 16px;
+}
+
+.popubDialog .popubDialog__close img {
+  width: 26px;
+  cursor: pointer;
+  display: inline-block;
+}
+
+.popubDialog .popubDialog__body .flexRow {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.popubDialog .deposit_logo {
+  width: calc(100% - 30px);  
+  margin: 30px 15px 0 15px;
+}
+
+.popubDialog .deposit_logo .content__logo{
+  height: 60px;
+  background: #fff;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 60px;
+}
+
+.popubDialog .deposit_logo .content__msg{
+  height: 60px;
+  background: #fff;
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.popubDialog .deposit_logo .content__logo .logo__image {
+  width: 60px;
+  margin: 0;
+}
+
+.popubDialog .deposit {
+  width: calc(100% / 2 - 30px);
+  /*box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.20000000298023224);
+  border-radius: 6px 6px 6px 6px;*/
+  margin: 15px;
+  /*cursor: pointer;*/
+  overflow: hidden;
+}
+
+.popubDialog .deposit .content {
+  text-align: center;
+  padding: 20px;
+}
